@@ -240,6 +240,10 @@ BUG FIXES
 	This caused problems for POSIXt objects, for which mean() but
 	not sum() makes sense.
 
+    o	Assigning an extra 0-length column to a data frame by
+    	DF$foo <- value gave a corrupt data frame rather than failing.
+	(PR#13724)
+
 
 
 
